# promption

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  package.json  vite.config.ts  vitest.config.ts
.beads/: issues.jsonl
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
.qoder/plans/: CLI_Export_and_Shortcuts_ef25cc6d.md
scripts/: validate-version.cjs
specs/: agent-integration-plan.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs
src/components/: AgentCard.tsx  AgentEditor.tsx  AgentExport.tsx  AgentList.tsx  ErrorBoundary.tsx  FloatingActions.tsx  Header.tsx  ItemCard.test.tsx  ItemCard.tsx  ItemEditor.tsx  ItemList.test.tsx  ItemList.tsx  KeyboardShortcutsHelp.tsx  SearchBar.test.tsx  SearchBar.tsx  SyntaxHighlighter.tsx  TagCombobox.tsx  TagFilter.test.tsx  TagFilter.tsx  TechIcon.tsx  ThemeToggle.tsx  TypeFilter.test.tsx  TypeFilter.tsx  ZoomControls.tsx
src/components/ui/: combobox.tsx
src/constants/: technologies.ts
src/data/: initial-content.json
src/hooks/: useKeyboardShortcuts.ts
src/lib/: utils.ts
src/services/: database.ts  export.ts
src/store/: appStore.ts
src/tests/: setup.ts  test-utils.tsx
src/types/: index.ts
